# greedy-token

./: .gitignore  CUT-v0.10.0.md  CUT-v0.6.0.md  CUT-v0.7.0.md  CUT-v0.8.0.md  CUT-v0.9.0.md  LICENSE  MANIFEST.in  README-RU.md  README.md  allurerc.mjs  dashboard-overrides.css  dashboard-overrides.js  history.jsonl  index.html  latest-run-id.txt  pyproject.toml
.github/: _modified.yml  _new.yml
.github/_ethalon/: README.md  gha-actions.yaml  pages-root.yml  publish.yml  test.yml
.github/assets/: dashboard-overrides.css  dashboard-overrides.js
.github/scripts/: capture-dashboard-preview.mjs  generate-readme-badge.sh  inject-allure-pyramid-colors.mjs  prepare-allure-pages-colors.sh
.github/workflows/: pages-root.yml  publish.yml  test.yml
allure/: awesome-charts.mjs  constants.mjs  create-config.mjs  dashboard-layout.mjs  pyramid-layer-colors.mjs  quality-gate.mjs
bench/: bench.py
docs/: CONTRACT-freeze-v0.5.5.md  CONTRACT-freeze-v0.5.6.md  ROADMAP-RU.md  ROADMAP.md  ci-setup-RU.md  ci-setup.md  claude-desktop-setup-RU.md  claude-desktop-setup.md  claude-setup-RU.md  claude-setup.md  continue-setup-RU.md  continue-setup.md  cursor-setup-RU.md  cursor-setup.md  mcp-setup-RU.md  mcp-setup.md  mutation-equivalents.yaml  perf-assessment.md  tms-automator-contract.md
docs/adr/: 0001-unified-model-spec-derived-tier.md  0002-metered-bulk-cheap-tier.md
examples/claude/: CLAUDE.md  README.md  claude_desktop_config.fragment.json  claude_desktop_config.json  claude_desktop_config.zero-design-system.json  instructions.md
examples/continue/: README.md  config.yaml
examples/cursor/: README.md  mcp.json
examples/presets/: README.md  local-ollama-3.yaml  local-ollama.yaml  prod-ollama-2.yaml  prod-ollama-3.yaml  selectel-cl21r.yaml  tms-automator.yaml
examples/routes/: workspace-routes.yaml  zero-design-system.yaml
examples/selectel/: greedy-token.yaml
notifications/: config.json
reports/28962665552/: index.html
reports/28963453429/: index.html
reports/28964597588/: index.html
reports/28964890037/: index.html
reports/28965794114/: index.html
reports/28967366873/: index.html
reports/28968287754/: index.html
reports/28968444039/: index.html
reports/28968510465/: index.html
reports/28969060326/: index.html
reports/28969202486/: index.html
reports/28972213544/: index.html
reports/28972473927/: index.html
reports/28977539080/: index.html
reports/28977651749/: index.html
reports/28977751850/: index.html
reports/28977999706/: index.html
reports/28978382294/: index.html
reports/29017011775/: index.html
reports/29017837587/: index.html
reports/29018542875/: index.html
reports/29025195578/: index.html
reports/29033382667/: index.html
reports/29033618021/: index.html
reports/29034122662/: index.html
reports/29034949020/: index.html
reports/29039366146/: index.html
reports/29054035693/: index.html
reports/29062235128/: index.html
reports/29063925897/: index.html
reports/29065046774/: index.html
reports/29066651211/: index.html
reports/29068769540/: index.html
reports/29070051910/: index.html
reports/29094903535/: index.html
reports/29095473643/: index.html
reports/29096200999/: index.html
reports/29104527080/: index.html
reports/29411159699/: index.html
reports/29411177900/: index.html
reports/29437962662/: index.html
reports/29438215553/: index.html
reports/29450890829/: index.html
reports/29451449279/: index.html
reports/29451782455/: index.html
reports/29452132578/: index.html
reports/29453302225/: index.html
reports/29454180930/: index.html
reports/29588831347/: index.html
reports/29646678010/: index.html
reports/29699500356/: index.html
reports/29775136021/: index.html
reports/29789948852/: index.html
reports/29798708632/: index.html
reports/29874041162/: index.html
reports/29876414787/: index.html
reports/29937861474/: index.html
reports/29951537402/: index.html
reports/29967584437/: index.html
reports/29972460156/: index.html
reports/29973017570/: index.html
reports/29974171965/: index.html
reports/29974356341/: index.html
reports/29974965950/: index.html
reports/29975014304/: index.html
reports/29979938887/: index.html
reports/30024865543/: index.html
reports/latest/: index.html
scripts/: check-github-workflows-sync.sh  mutation.sh  release-gate.sh  sync-github-workflows.sh  sync-min-tests-count.sh
src/greedy_token/: __init__.py  __main__.py  advisory.py  baseline.py  budget.py  budget_config.py  budget_ledger.py  budget_policy.py  calibration.py  cheap_llm.py  cli.py  code_search.py  context_audit.py  crystallize_l3.py  estimator.py  executors.py  expensive_llm.py  llm_invoke.py  mcp.py  model_select.py  paths.py  pipeline.py  prompt_compress.py  rag_index.py  rag_search.py  resource_probe.py  router.py  scripts_lint.py  settings.py  spend_guard.py  tokens.py  tool_output.py  tool_paths.py  usage.py  version.py  wrappers.py
src/llm_optimizer/: __init__.py  __main__.py  cli.py  context_audit.py  estimator.py  executors.py  paths.py  router.py  (+3 more)
tests/: allure_reporting.py  conftest.py  mcp_stdio_helpers.py  ollama_stub.py  pyramid_layers.py  test_advisory.py  test_agent_host.py  test_baseline.py  test_branch_coverage.py  test_budget.py  test_budget_gaps.py  test_budget_policy.py  test_calibration.py  test_cheap_llm.py  test_cli.py  test_cli_commands.py  test_cli_gaps.py  test_cli_handlers.py  test_code_search.py  test_code_search_gaps.py  test_config_presets.py  test_context_audit.py  test_coverage_gaps.py  test_crystallize_l3.py  test_doc_sync.py  test_estimator.py  test_executors.py  test_executors_gaps.py  test_expensive_llm.py  test_hub.py  test_hub_gaps.py  test_init.py  test_llm_invoke.py  test_llm_invoke_gaps.py  test_mcp_gaps.py  test_mcp_handlers.py  test_mcp_icon.py  test_mcp_stdio.py  test_mcp_tools.py  test_metered_bulk.py  (+30 more)
(+1225 files in other folders)
