[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "greedy-token"
version = "0.4.3"
description = "Route dev tasks through tool → python → ollama → RAG before escalating to Claude, ChatGPT, Codex, Cursor, etc."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Stanislav Vasenkov" }]
keywords = ["cli", "llm", "cursor", "claude", "chatgpt", "codex", "token-optimization", "rag", "ollama"]
dependencies = [
  "PyYAML>=6.0",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
greedy-token = "greedy_token.cli:main"
greedy-token-mcp = "greedy_token.mcp:main"

[project.urls]
Homepage = "https://github.com/svasenkov/greedy-token"
Repository = "https://github.com/svasenkov/greedy-token"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
greedy_token = ["config/*.yaml", "static/icon.png", "static/icon.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
