[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "greedy-token"
version = "0.7.1"
description = "Greedy token for Cursor: route tasks through rg, scripts, Ollama, and RAG before opening a full agent chat."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Stanislav Vasenkov" }]
keywords = ["cli", "llm", "cursor", "claude", "chatgpt", "codex", "token-optimization", "rag", "ollama"]
dependencies = [
  "PyYAML>=6.0",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "allure-pytest>=2.16", "coverage>=7.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
greedy-token = "greedy_token.cli:main"
greedy-token-mcp = "greedy_token.mcp:main"

[project.urls]
Homepage = "https://github.com/svasenkov/greedy-token"
Repository = "https://github.com/svasenkov/greedy-token"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
greedy_token = ["config/*.yaml", "presets/*.yaml", "static/icon.png", "static/icon.svg", "hub/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8.0"
markers = [
    "unit: pure logic, no subprocess or external IO",
    "component: module wiring, mocks, minimal_workspace fixtures",
    "integration: subprocess CLI, real rg, workspace checkout",
    "api: HTTP/API layer (reserved)",
    "e2e: MCP stdio end-to-end",
    "manual: manual tests (reserved)",
    "release: release gate — requires --release-version or GREEDY_TOKEN_RELEASE_VERSION",
]

[tool.coverage.run]
source = ["src/greedy_token"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
